# webcam

./: .gitignore  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/webcam/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DataStream.cpp  DataStream.h  GenASFPkts.cpp  GenASFPkts.h  sendasf.cpp
app/src/main/cpp/jpeg/: CMakeLists.txt
app/src/main/cpp/sendasf/: CMakeLists.txt  DataStream.cpp  GenASFPkts.cpp  SenderSingleton.cpp  SenderSingleton.h  jpegenc.cpp  jpegenc.h  sendasf.cpp  sendasf.h
app/src/main/cpp/sendasf/include/: jmorecfg.h  jpeglib.h
app/src/main/java/com/example/webcam/: CameraService.java  MainActivity.java  SettingsDialog.java
app/src/main/res/drawable/: cambutton.xml
app/src/main/res/layout/: activity_main.xml  settings_layout.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
